Text Overflow Fix
Restructured checkbox and delete divs to be floating divs

Limited checkbox div size to keep delete button in place

Text will overflow downward

--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -49,12 +49,18 @@
   width: auto;
 }
 
-.delButton {
-  display: inline;
-  float: right;
-}
-
 .scrollBar {
   overflow: auto;
   height: 500px;
+  position: relative;
+}
+
+.taskWidth {
+  width: 400px;
+  top: 50%;
+}
+
+.delButton {
+  position: absolute;
+  right: 0;
 }
